@@ -619,6 +619,11 @@ namespace tgui
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @internal
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void rightMousePressed(Vector2f pos) override;
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @internal
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         void mouseMoved(Vector2f pos) override;
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -795,6 +800,7 @@ namespace tgui
 
         SignalInt onItemSelect  = {"ItemSelected"};   ///< An item was selected in the list view. Optional parameter: selected item index (-1 when deselecting)
         SignalInt onDoubleClick = {"DoubleClicked"};  ///< An item was double clicked. Optional parameter: selected item index
+        SignalInt onRightClick  = {"RightClicked"};   ///< Right mouse clicked. Optional parameter: index of item below mouse (-1 when not on top of item)
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
